add CI ef0eb679d5affa5e6d5607af403e86b1232ab27d

--- a/snippets/second/index.html
+++ b/snippets/second/index.html
@@ -4,17 +4,22 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=content-language content="en">
 <meta name=author content="Atul Agarwal">
-<meta name=description content>
+<meta name=description content="This content is in snippets/second/index.md
+ls -la ">
 <meta name=keywords content="blog,developer,personal">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Atul Agarwal">
-<meta name=twitter:description content>
-<meta property="og:title" content="Atul Agarwal">
-<meta property="og:description" content>
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://www.atulagarwal.dev/">
-<title>Atul Agarwal</title>
-<link rel=canonical href=https://www.atulagarwal.dev/>
+<meta name=twitter:title content="Second snippet">
+<meta name=twitter:description content="This content is in snippets/second/index.md
+ls -la ">
+<meta property="og:title" content="Second snippet">
+<meta property="og:description" content="This content is in snippets/second/index.md
+ls -la ">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://www.atulagarwal.dev/snippets/second/"><meta property="article:section" content="snippets">
+<title>
+Second snippet · Atul Agarwal
+</title>
+<link rel=canonical href=https://www.atulagarwal.dev/snippets/second/>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather:300,700%7CSource+Code+Pro:400,700&display=swap" rel=stylesheet>
 <link rel=preload href="/fonts/forkawesome-webfont.woff2?v=1.1.7" as=font type=font/woff2 crossorigin>
@@ -24,7 +29,6 @@
 <link rel=icon type=image/png href=/images/favicon-16x16.png sizes=16x16>
 <link rel=apple-touch-icon href=/images/apple-touch-icon.png>
 <link rel=apple-touch-icon sizes=180x180 href=/images/apple-touch-icon.png>
-<link rel=alternate type=application/rss+xml href=/index.xml title="Atul Agarwal">
 <script defer src=https://twemoji.maxcdn.com/v/13.0.1/twemoji.min.js integrity=sha384-5f4X0lBluNY/Ib4VhGx0Pf6iDCF99VGXJIyYy7dDLY5QlEd7Ap0hICSSZA1XYbc4 crossorigin=anonymous></script>
 <meta name=generator content="Hugo 0.87.0">
 </head>
@@ -55,29 +59,19 @@ Atul Agarwal
 </section>
 </nav>
 <div class=content>
-<section class="container centered">
-<div class=about>
-<div class=avatar><img src=/images/myphoto.jpg alt=avatar></div>
-<h1>Atul Agarwal</h1>
-<h2 style=font-size:large>I believe in positive-sum games</h2>
-<ul>
-<li>
-<a href=https://twitter.com/asquare08/ aria-label=Twitter target=_blank>
-<i class="fa fa-twitter" aria-hidden=true></i>
+<section class="container page">
+<article>
+<header>
+<h1 class=title>
+<a class=title-link href=https://www.atulagarwal.dev/snippets/second/>
+Second snippet
 </a>
-</li>
-<li>
-<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn target=_blank>
-<i class="fa fa-linkedin" aria-hidden=true></i>
-</a>
-</li>
-<li>
-<a href=https://github.com/asquare8/ aria-label=Github target=_blank>
-<i class="fa fa-github" aria-hidden=true></i>
-</a>
-</li>
-</ul>
-</div>
+</h1>
+</header>
+<p>This content is in <code>snippets/second/index.md</code></p>
+<div class=highlight><pre tabindex=0 style=color:#e5e5e5;background-color:#000;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sh data-lang=sh>ls -la
+</code></pre></div>
+</article>
 </section>
 </div>
 <footer class=footer>
