--- a/snippets/index.html
+++ b/snippets/index.html
@@ -4,17 +4,17 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=content-language content="en">
 <meta name=author content="Atul Agarwal">
-<meta name=description content>
+<meta name=description content="This content is in content/snippets/_index.md">
 <meta name=keywords content="blog,developer,personal">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Atul Agarwal">
+<meta name=twitter:title content="Snippets">
 <meta name=twitter:description content>
-<meta property="og:title" content="Atul Agarwal">
+<meta property="og:title" content="Snippets">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.atulagarwal.dev/">
-<title>Atul Agarwal</title>
-<link rel=canonical href=https://www.atulagarwal.dev/>
+<meta property="og:url" content="https://www.atulagarwal.dev/snippets/">
+<title>Snippets · Atul Agarwal</title>
+<link rel=canonical href=https://www.atulagarwal.dev/snippets/>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather:300,700%7CSource+Code+Pro:400,700&display=swap" rel=stylesheet>
 <link rel=preload href="/fonts/forkawesome-webfont.woff2?v=1.1.7" as=font type=font/woff2 crossorigin>
@@ -24,7 +24,7 @@
 <link rel=icon type=image/png href=/images/favicon-16x16.png sizes=16x16>
 <link rel=apple-touch-icon href=/images/apple-touch-icon.png>
 <link rel=apple-touch-icon sizes=180x180 href=/images/apple-touch-icon.png>
-<link rel=alternate type=application/rss+xml href=/index.xml title="Atul Agarwal">
+<link rel=alternate type=application/rss+xml href=/snippets/index.xml title="Atul Agarwal">
 <script defer src=https://twemoji.maxcdn.com/v/13.0.1/twemoji.min.js integrity=sha384-5f4X0lBluNY/Ib4VhGx0Pf6iDCF99VGXJIyYy7dDLY5QlEd7Ap0hICSSZA1XYbc4 crossorigin=anonymous></script>
 <meta name=generator content="Hugo 0.87.0">
 </head>
@@ -55,29 +55,21 @@ Atul Agarwal
 </section>
 </nav>
 <div class=content>
-<section class="container centered">
-<div class=about>
-<div class=avatar><img src=/images/myphoto.jpg alt=avatar></div>
-<h1>Atul Agarwal</h1>
-<h2 style=font-size:large>I believe in positive-sum games</h2>
+<section class="container list">
+<h1 class=title>
+<a class=title-link href=https://www.atulagarwal.dev/snippets/>Snippets</a>
+</h1>
+<p>This content is in <code>content/snippets/_index.md</code></p>
 <ul>
 <li>
-<a href=https://twitter.com/asquare08/ aria-label=Twitter target=_blank>
-<i class="fa fa-twitter" aria-hidden=true></i>
-</a>
+<span class=date>January 1, 0001</span>
+<a class=title href=/snippets/first/>First snippet</a>
 </li>
 <li>
-<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn target=_blank>
-<i class="fa fa-linkedin" aria-hidden=true></i>
-</a>
-</li>
-<li>
-<a href=https://github.com/asquare8/ aria-label=Github target=_blank>
-<i class="fa fa-github" aria-hidden=true></i>
-</a>
+<span class=date>January 1, 0001</span>
+<a class=title href=/snippets/second/>Second snippet</a>
 </li>
 </ul>
-</div>
 </section>
 </div>
 <footer class=footer>
