show nav iterms on home page in mobile view d434d9095d9f93410c711f80ebbd63a262c87801

--- a/index.html
+++ b/index.html
@@ -77,8 +77,19 @@ Atul Agarwal
 </a>
 </li>
 </ul>
+<div id=mobile-screen , class=mobile-screen>
+<ul>
+<li>
+<a href=/posts/>Posts</a>
+</li>
+<li>
+<a href=/about/>About</a>
+</li>
+</ul>
+</div>
 </div>
 </section>
+<script>var element=document.getElementById("mobile-screen");window.matchMedia('(max-width: 768px)').matches||(element.style.display="none")</script>
 </div>
 <footer class=footer>
 <section class=container>
