change profile pic 7dbbfb348745c4cd2f60c2a02f79915ef93ad962

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Atul Agarwal
 <div class=content>
 <section class="container centered">
 <div class=about>
-<div class=avatar><img src=/images/myphoto.jpg alt=avatar></div>
+<div class=avatar><img src=/images/myphoto.png alt=avatar></div>
 <h1>Atul Agarwal</h1>
 <h2 style=font-size:large>I believe in positive-sum games</h2>
 <ul>
