minor fixes based on lighthouse report 0196f637e71e7cba73e2ac7bff609b18d2a38926

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=content-language content="en">
 <meta name=author content="Atul Agarwal">
-<meta name=description content>
+<meta name=description content="atul agarwal">
 <meta name=keywords content="blog,developer,personal">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Atul Agarwal">
-<meta name=twitter:description content>
+<meta name=twitter:description content="atul agarwal">
 <meta property="og:title" content="Atul Agarwal">
-<meta property="og:description" content>
+<meta property="og:description" content="atul agarwal">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.atulagarwal.dev/">
 <title>Atul Agarwal</title>
@@ -57,22 +57,22 @@ Atul Agarwal
 <div class=content>
 <section class="container centered">
 <div class=about>
-<div class=avatar><img src=/images/myphoto.png alt=avatar></div>
+<div class=avatar><img src=/images/myphoto.jpeg alt=avatar></div>
 <h1>Atul Agarwal</h1>
 <h2 style=font-size:large>I believe in positive-sum games</h2>
 <ul>
 <li>
-<a href=https://twitter.com/asquare08/ aria-label=Twitter target=_blank>
+<a href=https://twitter.com/asquare08/ aria-label=Twitter rel=noopener target=_blank>
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
 </li>
 <li>
-<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn target=_blank>
+<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn rel=noopener target=_blank>
 <i class="fa fa-linkedin" aria-hidden=true></i>
 </a>
 </li>
 <li>
-<a href=https://github.com/asquare8/ aria-label=Github target=_blank>
+<a href=https://github.com/asquare8/ aria-label=Github rel=noopener target=_blank>
 <i class="fa fa-github" aria-hidden=true></i>
 </a>
 </li>
@@ -98,17 +98,17 @@ Atul Agarwal
 <section class=container , id=custom-container>
 <ul>
 <li>
-<a href=https://twitter.com/asquare08/ aria-label=Twitter target=_blank>
+<a href=https://twitter.com/asquare08/ aria-label=Twitter rel=noopener target=_blank>
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
 </li>
 <li>
-<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn target=_blank>
+<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn rel=noopener target=_blank>
 <i class="fa fa-linkedin" aria-hidden=true></i>
 </a>
 </li>
 <li>
-<a href=https://github.com/asquare8/ aria-label=Github target=_blank>
+<a href=https://github.com/asquare8/ aria-label=Github rel=noopener target=_blank>
 <i class="fa fa-github" aria-hidden=true></i>
 </a>
 </li>
