--- a/snippets/second/index.html
+++ b/snippets/second/index.html
@@ -81,17 +81,17 @@ Second snippet
 <section class=container , id=custom-container>
 <ul>
 <li>
-<a href=https://twitter.com/asquare08/ aria-label=Twitter target=_blank>
+<a href=https://twitter.com/asquare08/ aria-label=Twitter rel=noopener target=_blank>
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
 </li>
 <li>
-<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn target=_blank>
+<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn rel=noopener target=_blank>
 <i class="fa fa-linkedin" aria-hidden=true></i>
 </a>
 </li>
 <li>
-<a href=https://github.com/asquare8/ aria-label=Github target=_blank>
+<a href=https://github.com/asquare8/ aria-label=Github rel=noopener target=_blank>
 <i class="fa fa-github" aria-hidden=true></i>
 </a>
 </li>
