--- a/404.html
+++ b/404.html
@@ -4,13 +4,13 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=content-language content="en">
 <meta name=author content="Atul Agarwal">
-<meta name=description content>
+<meta name=description content="atul agarwal">
 <meta name=keywords content="blog,developer,personal">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
-<meta name=twitter:description content>
+<meta name=twitter:description content="atul agarwal">
 <meta property="og:title" content="404 Page not found">
-<meta property="og:description" content>
+<meta property="og:description" content="atul agarwal">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.atulagarwal.dev/404.html">
 <title>Atul Agarwal</title>
@@ -69,17 +69,17 @@ Atul Agarwal
 <section class=container , id=custom-container>
 <ul>
 <li>
-<a href=https://twitter.com/asquare08/ aria-label=Twitter target=_blank>
+<a href=https://twitter.com/asquare08/ aria-label=Twitter rel=noopener target=_blank>
 <i class="fa fa-twitter" aria-hidden=true></i>
 </a>
 </li>
 <li>
-<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn target=_blank>
+<a href=https://www.linkedin.com/in/iitjatul/ aria-label=LinkedIn rel=noopener target=_blank>
 <i class="fa fa-linkedin" aria-hidden=true></i>
 </a>
 </li>
 <li>
-<a href=https://github.com/asquare8/ aria-label=Github target=_blank>
+<a href=https://github.com/asquare8/ aria-label=Github rel=noopener target=_blank>
 <i class="fa fa-github" aria-hidden=true></i>
 </a>
 </li>
