--- a/series/amm-design/index.html
+++ b/series/amm-design/index.html
@@ -26,7 +26,7 @@
 <link rel=apple-touch-icon sizes=180x180 href=/images/apple-touch-icon.png>
 <link rel=alternate type=application/rss+xml href=/series/amm-design/index.xml title="Atul Agarwal">
 <script defer src=https://twemoji.maxcdn.com/v/13.0.1/twemoji.min.js integrity=sha384-5f4X0lBluNY/Ib4VhGx0Pf6iDCF99VGXJIyYy7dDLY5QlEd7Ap0hICSSZA1XYbc4 crossorigin=anonymous></script>
-<meta name=generator content="Hugo 0.91.2">
+<meta name=generator content="Hugo 0.92.0">
 </head>
 <body class=colorscheme-auto onload=twemoji.parse(document.body)>
 <div class=float-container>
@@ -60,6 +60,10 @@ Atul Agarwal
 <a class=title-link href=https://www.atulagarwal.dev/series/amm-design/>Series: AMM Design</a>
 </h1>
 <ul>
+<li>
+<span class=date>January 18, 2022</span>
+<a class=title href=/posts/hubblevamm/>Hubble vAMM: CurveCrypto Invariant</a>
+</li>
 <li>
 <span class=date>August 20, 2021</span>
 <a class=title href=/posts/curveamm/stableswap/>Understanding the Curve AMM, Part -1: StableSwap Invariant</a>
